.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:45:15 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
make: No se hace nada para «all».
18:45:31 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
make: No se hace nada para «all».
18:45:33 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
make: No se hace nada para «all».
18:46:01 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
make: No se hace nada para «all».
20:04:17 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
In file included from ../main.c:7:0:
../CrearArchivo/crearArchivo.h: In function ‘mapeaAMemoria’:
../CrearArchivo/crearArchivo.h:1:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘void’
 void crearArchivo(char* nombreArchivo);
 ^
../main.c:11:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int main() {
            ^
../main.c:29:1: error: unterminated comment
 /*
 ^
In file included from ../main.c:6:0:
../mapeoAMemoria.h:3:1: error: parameter name omitted
 char* mapeaAMemoria(int , int ,char* ) //hace el mmap, recibe el tamaño pagina, ptr archivoAbierto, ptr DirArchivo
 ^
../mapeoAMemoria.h:3:1: error: parameter name omitted
../mapeoAMemoria.h:3:1: error: parameter name omitted
../main.c:25:1: error: expected ‘{’ at end of input
 }
 ^
../main.c:25:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [main.o] Error 1
20:05:51 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
In file included from ../main.c:7:0:
../CrearArchivo/crearArchivo.h: In function ‘mapeaAMemoria’:
../CrearArchivo/crearArchivo.h:1:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘void’
 void crearArchivo(char* nombreArchivo);
 ^
../main.c:11:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int main() {
            ^
../main.c:29:1: error: unterminated comment
 /*
 ^
In file included from ../main.c:6:0:
../mapeoAMemoria.h:3:1: error: parameter name omitted
 char* mapeaAMemoria(int , int ,char* ) //hace el mmap, recibe el tamaño pagina, ptr archivoAbierto, ptr DirArchivo
 ^
../mapeoAMemoria.h:3:1: error: parameter name omitted
../mapeoAMemoria.h:3:1: error: parameter name omitted
../main.c:25:1: error: expected ‘{’ at end of input
 }
 ^
../main.c:25:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [main.o] Error 1
20:07:27 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
../main.c:11:5: error: two or more data types in declaration specifiers
 int int main(int argc, char **argv) {
     ^
../main.c:30:1: error: unterminated comment
 /*
 ^
make: *** [main.o] Error 1
20:08:07 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
../main.c:30:1: error: unterminated comment
 /*
 ^
make: *** [main.o] Error 1
20:08:43 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building file: ../mapeoAMemoria.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"mapeoAMemoria.d" -MT"mapeoAMemoria.d" -o "mapeoAMemoria.o" "../mapeoAMemoria.c"
Finished building: ../mapeoAMemoria.c
 
Building file: ../nuevoMapeo.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"nuevoMapeo.d" -MT"nuevoMapeo.d" -o "nuevoMapeo.o" "../nuevoMapeo.c"
Finished building: ../nuevoMapeo.c
 
Building target: mapeoAMemoria
Invoking: GCC C Linker
gcc  -o "mapeoAMemoria"  ./CrearArchivo/crearArchivo.o  ./main.o ./mapeo.o ./mapeoAMemoria.o ./nuevoMapeo.o   
Finished building target: mapeoAMemoria
 
20:09:03 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
make: No se hace nada para «all».
20:19:37 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building file: ../mapeoAMemoria.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"mapeoAMemoria.d" -MT"mapeoAMemoria.d" -o "mapeoAMemoria.o" "../mapeoAMemoria.c"
Finished building: ../mapeoAMemoria.c
 
Building target: mapeoAMemoria
Invoking: GCC C Linker
gcc  -o "mapeoAMemoria"  ./CrearArchivo/crearArchivo.o  ./main.o ./mapeo.o ./mapeoAMemoria.o ./nuevoMapeo.o   
./main.o: En la función `main':
/home/utnso/TPOperativos/mapeoAMemoria/Debug/../main.c:25: referencia a `desMapea' sin definir
collect2: error: ld returned 1 exit status
make: *** [mapeoAMemoria] Error 1
20:20:08 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: mapeoAMemoria
Invoking: GCC C Linker
gcc  -o "mapeoAMemoria"  ./CrearArchivo/crearArchivo.o  ./main.o ./mapeo.o ./mapeoAMemoria.o ./nuevoMapeo.o   
./main.o: En la función `main':
/home/utnso/TPOperativos/mapeoAMemoria/Debug/../main.c:25: referencia a `desMapea' sin definir
collect2: error: ld returned 1 exit status
make: *** [mapeoAMemoria] Error 1
20:21:02 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: mapeoAMemoria
Invoking: GCC C Linker
gcc  -o "mapeoAMemoria"  ./CrearArchivo/crearArchivo.o  ./main.o ./mapeo.o ./mapeoAMemoria.o ./nuevoMapeo.o   
./main.o: En la función `main':
/home/utnso/TPOperativos/mapeoAMemoria/Debug/../main.c:26: referencia a `desMapea' sin definir
collect2: error: ld returned 1 exit status
make: *** [mapeoAMemoria] Error 1
20:22:23 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
Building file: ../mapeoAMemoria.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"mapeoAMemoria.d" -MT"mapeoAMemoria.d" -o "mapeoAMemoria.o" "../mapeoAMemoria.c"
Finished building: ../mapeoAMemoria.c
 
Building target: mapeoAMemoria
Invoking: GCC C Linker
gcc  -o "mapeoAMemoria"  ./CrearArchivo/crearArchivo.o  ./main.o ./mapeo.o ./mapeoAMemoria.o ./nuevoMapeo.o   
Finished building target: mapeoAMemoria
 
20:22:44 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
make: No se hace nada para «all».
20:25:05 **** Incremental Build of configuration Debug for project mapeoAMemoria ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: mapeoAMemoria
Invoking: GCC C Linker
gcc  -o "mapeoAMemoria"  ./CrearArchivo/crearArchivo.o  ./main.o ./mapeo.o ./mapeoAMemoria.o ./nuevoMapeo.o   
Finished building target: mapeoAMemoria
 
